--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,19 @@ services:
     build: .
     volumes: 
       - .:/app
-    command: python manage.py runserver 0.0.0.0:8000
-    #command: python manage.py migrate && python manage.py runserver 0.0.0.0:8000
+    #command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py migrate && python manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
     container_name: django-server  
     depends_on:
       - redis
-
+      
 
   redis:
     image: redis:7.2.4-alpine
     container_name: redis-server
-
+  
   db:
     image: postgres:latest
     volumes:
@@ -26,7 +26,7 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=Amazon
-
+ 
 volumes:
   postgres_data:  
 
