--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,23 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=Amazon
- 
+    depends_on:
+      - backend
+
+
+  celery:
+    image: celery:4.0.2
+    container_name: celeryserver
+    build: .
+    volumes: 
+      - .:/app
+    command: celery -A project worker -l INFO
+    depends_on:
+      - backend
+
+  
+
+
 volumes:
   postgres_data:  
 
