--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+amqp==5.2.0
 asgiref==3.7.2
+billiard==4.2.0
+celery==5.3.6
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
 cryptography==42.0.2
 defusedxml==0.7.1
 dj-rest-auth==5.0.2
@@ -18,22 +26,27 @@ drf-yasg==1.21.7
 HTMLParser==0.0.2
 idna==3.6
 inflection==0.5.1
+kombu==5.3.5
 Markdown==3.5.1
 numpy==1.26.3
 oauthlib==3.2.2
 packaging==23.2
 Pillow==10.1.0
+prompt-toolkit==3.0.43
+psycopg2-binary==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
+python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 redis==5.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.3
 uritemplate==4.1.1
 urllib3==2.2.0
-psycopg2-binary==2.9.9
-
+vine==5.1.0
+wcwidth==0.2.13
